<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="BigArm" Id="{9fddc45a-64f8-43cf-8be0-6fa364f752d6}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK BigArm
VAR_INPUT
	AxisInput:Command;//定义一个驱动轮PLC轴的输入结构体变量
END_VAR
VAR_OUTPUT
	AxisOutput:Status;//定义一个驱动轮PLC轴的输出结构体变量
END_VAR
VAR
	axis:axis_ref;		//定义一个轴
	power:mc_power;		//使能功能块
	moveAbsolute:mc_moveabsolute;//绝对运动功能块
	moveRelative:mc_moverelative;//相对运动功能块
	moveVelocity:mc_movevelocity;//匀速运动功能块
	reset:mc_reset;				//复位功能块
	halt:mc_halt;				//暂停功能块
	Home:mc_home;				//寻参功能块
	SetZero:mc_Setposition;		//强制设置位置功能块
	Dir: MC_Direction;			//匀速运动方向变量，1/3
	Signal:BOOL;				//寻参触发点
	temp:LREAL;
	flag: INT:=0;
	start_flag: BOOL:=TRUE;
	start_position: LREAL;
	moveRelative_do: BOOL;
	temp_position: LREAL;
	temp_velocity: LREAL;
	coefficient:INT:=1;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF Axis.NcToPlc.ActPos-74.9>180 THEN
	temp:=360;
ELSIF Axis.NcToPlc.ActPos-74.9<-180	THEN
	temp:=-360;
ELSE
	temp:=0;		
END_IF
AxisOutput.Position:=Axis.NcToPlc.ActPos-74.9-temp;
IF start_flag THEN
	start_position:=AxisOutput.Position;
	start_flag:=FALSE;
END_IF
IF AxisOutput.Enable=FALSE THEN
	start_flag:=TRUE;
END_IF
IF start_position-1>0 THEN 
	coefficient:=-1;
ELSE 
	coefficient:=1;
END_IF
GVL.bigarm_position:=start_position;
AxisOutput.Velocity:=Axis.NcToPlc.ActVelo;
power(
	Axis:=axis, 
	Enable:=AxisInput.Enable, 
	Enable_Positive:=TRUE, 
	Enable_Negative:=TRUE, 
	Override:= , 
	BufferMode:= , 
	Options:= ,                   
	Status=>AxisOutput.Enable, 
	Busy=> , 
	Active=> , 
	Error=> , 
	ErrorID=> );
	
IF 	AxisOutput.Enable AND flag=0 THEN
	moveRelative_do:=TRUE;
	temp_position:=0.3*coefficient;
	temp_velocity:=1;
	flag:=1;
END_IF
IF flag=1 AND (AxisOutput.Position-start_position)*coefficient>0.2 THEN
	moveRelative_do:=AxisInput.Move_Relative;
	temp_position:=AxisInput.Position;
	temp_velocity:=AxisInput.Velocity;
	flag:=2;
END_IF
IF AxisOutput.Enable=FALSE AND flag=2 THEN
	flag:=0;
END_IF	
moveAbsolute(
	Axis:=axis, 
	Execute:=AxisInput.Move_Absolute, 
	Position:=AxisInput.Position+74.9+temp, 
	Velocity:=AxisInput.Velocity, 
	Acceleration:= , 
	Deceleration:= , 
	Jerk:= , 
	BufferMode:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
moveRelative(
	Axis:=axis, 
	Execute:=moveRelative_do, 
	Distance:=temp_position, 
	Velocity:=temp_velocity, 
	Acceleration:= , 
	Deceleration:= , 
	Jerk:= , 
	BufferMode:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );

	IF(AxisInput.Velocity>=0)THEN
		Dir:=1;
	ELSIF(AxisInput.Velocity<0)THEN
		Dir:=3;
		AxisInput.Velocity:=-AxisInput.Velocity;
	END_IF
moveVelocity(
	Axis:= axis, 
	Execute:= AxisInput.Move_Velocity, 
	Velocity:= AxisInput.Velocity, 
	Acceleration:= , 
	Deceleration:= , 
	Jerk:= , 
	Direction:= Dir, 
	BufferMode:= , 
	Options:= , 
	InVelocity=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
	
reset(
	Axis:= axis, 
	Execute:= AxisInput.Reset, 
	Done=> , 
	Busy=> , 
	Error=> , 
	ErrorID=> );
	
halt(
	Axis:= axis, 
	Execute:= AxisInput.Halt, 
	Deceleration:= , 
	Jerk:= , 
	BufferMode:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
	IF(AxisInput.HomeSignal=524288)THEN
		Signal:=TRUE;
	ELSE 
		Signal:=FALSE;		
	END_IF	
Home(
	Axis:= axis, 
	Execute:= AxisInput.Home, 
	Position:= 0, 
	HomingMode:= , 
	BufferMode:= , 
	Options:= , 
	bCalibrationCam:= Signal, 
	Done=> , 
	Busy=> , 
	Active=> , 
	CommandAborted=> , 
	Error=> , 
	ErrorID=> );
	
SetZero(
	Axis:=axis , 
	Execute:=AxisInput.SetZero , 
	Position:= 0, 
	Mode:= , 
	Options:= , 
	Done=> , 
	Busy=> , 
	Error=> , 
	ErrorID=> );

]]></ST>
    </Implementation>
    <LineIds Name="BigArm">
      <LineId Id="214" Count="1" />
      <LineId Id="219" Count="0" />
      <LineId Id="221" Count="2" />
      <LineId Id="216" Count="0" />
      <LineId Id="213" Count="0" />
      <LineId Id="260" Count="5" />
      <LineId Id="259" Count="0" />
      <LineId Id="303" Count="1" />
      <LineId Id="306" Count="1" />
      <LineId Id="305" Count="0" />
      <LineId Id="302" Count="0" />
      <LineId Id="212" Count="0" />
      <LineId Id="38" Count="11" />
      <LineId Id="9" Count="0" />
      <LineId Id="190" Count="0" />
      <LineId Id="268" Count="7" />
      <LineId Id="308" Count="1" />
      <LineId Id="276" Count="3" />
      <LineId Id="50" Count="0" />
      <LineId Id="52" Count="14" />
      <LineId Id="51" Count="0" />
      <LineId Id="285" Count="14" />
      <LineId Id="67" Count="0" />
      <LineId Id="113" Count="0" />
      <LineId Id="87" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="106" Count="0" />
      <LineId Id="109" Count="1" />
      <LineId Id="105" Count="0" />
      <LineId Id="89" Count="14" />
      <LineId Id="88" Count="0" />
      <LineId Id="111" Count="0" />
      <LineId Id="114" Count="5" />
      <LineId Id="112" Count="0" />
      <LineId Id="120" Count="0" />
      <LineId Id="122" Count="11" />
      <LineId Id="121" Count="0" />
      <LineId Id="150" Count="3" />
      <LineId Id="134" Count="0" />
      <LineId Id="136" Count="12" />
      <LineId Id="135" Count="0" />
      <LineId Id="154" Count="0" />
      <LineId Id="156" Count="8" />
      <LineId Id="155" Count="0" />
      <LineId Id="167" Count="0" />
      <LineId Id="166" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>